samples/_failures_safe/1761646336_0f9357_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa838c57.c: In function ‘main’:
./samples/SAFE/__tmp_fa838c57.c:162:14: error: expected ‘)’ at end of input
  162 |     if (start
      |        ~     ^
      |              )
./samples/SAFE/__tmp_fa838c57.c:162:5: error: expected declaration or statement at end of input
  162 |     if (start
      |     ^~
